--- a/spring-boot-mail/src/main/resources/application.yml
+++ b/spring-boot-mail/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   mail:
     default-encoding: utf-8
     # 服务器地址
-    host: smtp.126.com
+    host: smtp.qq.com
     # 用户名
-    username: xxx@126.com
+    username: 491118612@qq.com
     # 授权码（不是登录密码）
-    password: xxx
+    password: fvyyjkjdtuhnbiej
