--- a/spring-boot-mail/src/main/resources/application.yml
+++ b/spring-boot-mail/src/main/resources/application.yml
@@ -1,11 +1,24 @@
 server:
   port: 7023
+
+# qq邮箱作为发件人
+#spring:
+#  mail:
+#    default-encoding: utf-8
+#    # 服务器地址
+#    host: smtp.qq.com
+#    # 用户名
+#    username: 491118612@qq.com
+#    # 授权码（不是登录密码）
+#    password: fvyyjkjdtuhnbiej
+
+# 163邮箱作为发件人
 spring:
   mail:
     default-encoding: utf-8
     # 服务器地址
-    host: smtp.qq.com
+    host: smtp.163.com
     # 用户名
-    username: 491118612@qq.com
+    username: lzy_lio@163.com
     # 授权码（不是登录密码）
-    password: fvyyjkjdtuhnbiej
+    password: ZVCOJIIXGSMESWBP
